fix z-index of planner aside

--- a/client/src/components/PlannerAside/plannerAside.css
+++ b/client/src/components/PlannerAside/plannerAside.css
@@ -90,7 +90,7 @@ h6 {
     top: 5.3rem;
     width: unset;
     padding: 0;
-    z-index: 20;
+    z-index: 0;
   }
   h6 {
     color: #009bff;
